--- a/templates/segnala/email/validazione.html
+++ b/templates/segnala/email/validazione.html
@@ -1,3 +1,9 @@
+{% comment %}
+# Subject to the terms of the GNU AFFERO GENERAL PUBLIC LICENSE, v. 3.0. If a copy of the AGPL was not
+# distributed with this file, You can obtain one at http://www.gnu.org/licenses/agpl.txt
+#
+# Author: Davide Galletti                davide   ( at )   c4k.it
+{% endcomment %}
 <p>Gentile {{ segnalazione.nome }} {{ segnalazione.cognome }},</p>
 <p></p>
 <p>è stata registrata una segnalazione presso il sito del comune di Calci (PI) con questo indirizzo di e-mail.</p>
