--- a/templates/segnala/core.html
+++ b/templates/segnala/core.html
@@ -7,6 +7,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Front-end Segnalazioni Comune di Calci versione {{ versione }} -->
     <meta charset="UTF-8">
     <title>Segnalazioni Comune di Calci (PI)</title>
     {% load bootstrap4 %}
@@ -23,5 +24,12 @@
     {% block content %}
     {% endblock %}
 </div>
+<!--
+# Subject to the terms of the GNU AFFERO GENERAL PUBLIC LICENSE, v. 3.0. If a copy of the AGPL was not
+# distributed with this file, You can obtain one at http://www.gnu.org/licenses/agpl.txt
+#
+# Front-end Segnalazioni del Comune di Calci - Versione {{ versione }}
+# Author: Davide Galletti                davide   ( at )   c4k.it
+-->
 </body>
 </html>
