--- a/templates/segnala/email/validazione.html
+++ b/templates/segnala/email/validazione.html
@@ -11,7 +11,7 @@
 <p></p>
 <p>Per completare la segnalazione è necessario validare il tuo indirizzo di e-mail usando il seguente collegamento.</p>
 <p></p>
-<p><a href="http://{{ http_host }}{% url "v" segnalazione.id segnalazione.token_validazione %}">Fai clic qui per validare il messaggio.</a></p>
+<p><a href="{{ http_host }}{% url "v" segnalazione.id segnalazione.token_validazione %}">Fai clic qui per validare il messaggio.</a></p>
 <p></p>
 <p>Cordiali saluti</p>
 
