--- a/templates/segnala/thank_you.html
+++ b/templates/segnala/thank_you.html
@@ -1,7 +1,7 @@
 {% extends "segnala/core.html" %}
 {% load bootstrap4 %}
 {% block content %}
-    <h2 align="center" class="display-5">Grazie!</h2>
+    <h2 align="center" class="display-5">Grazie! Riceverai un e-mail tramite il quale potrai confermare l'invio della segnalazione.</h2>
     {{ segnalazione.titolo }}
 {% endblock %}
 {% comment %}
