fixes #39, controllo del centro della posizione, css per mobile

--- a/templates/segnala/email/validazione.html
+++ b/templates/segnala/email/validazione.html
@@ -13,5 +13,4 @@
 <p></p>
 <p><a href="{{ http_host }}{% url "v" segnalazione.id segnalazione.token_validazione %}">Fai clic qui per validare il messaggio.</a></p>
 <p></p>
-<p>Cordiali saluti</p>
-
+<p>Grazie per la segnalazione!</p>
