--- a/templates/segnala/core.html
+++ b/templates/segnala/core.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% comment %}
 # Subject to the terms of the GNU AFFERO GENERAL PUBLIC LICENSE, v. 3.0. If a copy of the AGPL was not
 # distributed with this file, You can obtain one at http://www.gnu.org/licenses/agpl.txt
@@ -22,8 +23,8 @@
     <div class="container">
         <header class="header" role="banner">
             <div class="header-inner clearfix">
-                <a class="brand pull-left" href="https://www.comune.calci.pi.it/">
-                    <img src="https://www.comune.calci.pi.it/images/Loghi_Home_page/logo_01_ulivi.jpg" alt="Comune di Calci">
+                <a class="brand pull-left" href="/">
+                    <img src="{% static "images/logo.png" %}" alt="Comune di Calci" class="responsive">
                 </a>
                 <div class="header-search pull-right">
 
