--- a/templates/segnala/place_form.html
+++ b/templates/segnala/place_form.html
@@ -5,7 +5,7 @@
     <form enctype="multipart/form-data" method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <input class="btn btn-primary text-light btn-lg" type="submit" value="submit">
+        <input class="btn btn-primary text-light btn-lg" type="submit" value="Invia segnalazione">
     </form>
     {{ form.media }}
 {% endblock %}
