Rewrite thank you page

--- a/templates/segnala/validazione.html
+++ b/templates/segnala/validazione.html
@@ -1,8 +1,7 @@
 {% extends "segnala/core.html" %}
 {% load bootstrap4 %}
 {% block content %}
-    <h2 align="center" class="display-5">Grazie! Riceverai un e-mail tramite la quale potrai confermare l'invio della segnalazione.</h2>
-    #{{ segnalazione.titolo }}
+    <h2 align="center" class="display-5">Grazie!</h2>
     <script>
         var timer = setTimeout(function() {
             window.location='https://segnala.comune.calci.pi.it'
