--- a/templates/segnala/vedi_segnalazione.html
+++ b/templates/segnala/vedi_segnalazione.html
@@ -1,8 +1,12 @@
 {% extends "segnala/core.html" %}
 {% load bootstrap4 %}
 {% block content %}
-    <h2 align="center" class="display-5">Grazie!</h2>
-    {{ segnalazione.titolo }}
+    <h2 align="center" class="display-5">Grazie! Riceverai un e-mail tramite la quale potrai confermare l'invio della segnalazione.</h2>
+    <script>
+        var timer = setTimeout(function() {
+            window.location='https://segnala.comune.calci.pi.it'
+        }, 10000);
+    </script>
 {% endblock %}
 {% comment %}
 # Subject to the terms of the GNU AFFERO GENERAL PUBLIC LICENSE, v. 3.0. If a copy of the AGPL was not
