--- a/templates/segnala/thank_you.html
+++ b/templates/segnala/thank_you.html
@@ -4,8 +4,8 @@
     <h2 align="center" class="display-5">Grazie! Riceverai un e-mail tramite la quale potrai confermare l'invio della segnalazione.</h2>
     <script>
         var timer = setTimeout(function() {
-            window.location='https://segnala.comune.calci.pi.it'
-        }, 10000);
+            window.location='/'
+        }, 30000);
     </script>
 {% endblock %}
 {% comment %}
