--- a/templates/segnala/email/validazione.html
+++ b/templates/segnala/email/validazione.html
@@ -6,11 +6,13 @@
 {% endcomment %}
 <p>Gentile {{ segnalazione.nome }} {{ segnalazione.cognome }},</p>
 <p></p>
-<p>è stata registrata una segnalazione presso il sito del comune di Calci (PI) con questo indirizzo di e-mail.</p>
-<p>Se non hai fatto tu la segnalazione puoi semplicemente ignorare questo messaggio.</p>
+<p>hai inviato una segnalazione al Comune di Calci (PI) con questo indirizzo di e-mail.</p>
+<p>Se non hai fatto tu la segnalazione ignora questo messaggio.</p>
 <p></p>
-<p>Per completare la segnalazione è necessario validare il tuo indirizzo di e-mail usando il seguente collegamento.</p>
+<p>Per registrare la segnalazione conferma il tuo indirizzo di e-mail usando il seguente collegamento:</p>
 <p></p>
-<p><a href="{{ http_host }}{% url "v" segnalazione.id segnalazione.token_validazione %}">Fai clic qui per validare il messaggio.</a></p>
+<p><a href="{{ http_host }}{% url "v" segnalazione.id segnalazione.token_validazione %}">Fai clic qui per registrare la segnalazione</a></p>
 <p></p>
-<p>Grazie per la segnalazione!</p>
+<p>Ti ricordiamo che potrai seguire l'iter della segnalazioni utilizzando lo stesso link.</p>
+<p></p>
+<p>Grazie!</p>
