fix http_host su template

--- a/templates/segnala/email/validazione.html
+++ b/templates/segnala/email/validazione.html
@@ -11,7 +11,7 @@
 <p></p>
 <p>Per registrare la segnalazione conferma il tuo indirizzo di e-mail usando il seguente collegamento:</p>
 <p></p>
-<p><a href="{{ http_host }}{% url "v" segnalazione.id segnalazione.token_validazione %}">Fai clic qui per registrare la segnalazione</a></p>
+<p><a href="https://{% url "v" segnalazione.id segnalazione.token_validazione %}">Fai clic qui per registrare la segnalazione</a></p>
 <p></p>
 <p>Ti ricordiamo che potrai seguire l'iter della segnalazioni utilizzando lo stesso link.</p>
 <p></p>
